--- a/Hyperion_Updateds.html
+++ b/Hyperion_Updateds.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hyperion_Updateds</title>
+  <title>Hyperion_updates</title>
   <link rel="icon" href="https://www.roblox.com/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -77,7 +77,7 @@
       return cache;
     }
     log("Fetching deploy history through proxy...");
-    const res = await fetch("https://api.allorigins.win/raw?url=" + encodeURIComponent("https://setup.rbxcdn.com/DeployHistory.txt"));
+    const res = await fetch("https://setup.rbxcdn.com/DeployHistory.txt");
     const text = await res.text();
     const lines = text.trim().split("\n");
     const recentLines = lines.slice(-6000);
@@ -122,14 +122,20 @@
         log("⚠️ New version detected.");
         const base = `https://setup.rbxcdn.com/${latestHash}`;
 		
-			 downloadSection.innerHTML = `
-		  <div style="margin-top: 15px;">
-			<strong>⬇ Cannot link DLL/EXE directly — use official installer:</strong><br><br>
-			<a href="https://www.roblox.com/download/client" target="_blank" style="display:inline-block;margin:5px 0;padding:10px 16px;background:#0ff;color:#000;font-weight:600;border-radius:6px;text-decoration:none;">
-			  Open Official Roblox Installer
-			</a>
-		  </div>
-		`;
+downloadSection.innerHTML = `
+  <div style="margin-top: 15px; background: #101015; padding: 20px; border-radius: 10px; border-left: 4px solid #00ffc3; box-shadow: 0 4px 14px rgba(0, 255, 195, 0.2);">
+    <div style="font-size: 1.1rem; font-weight: 600; color: #00ffc3; margin-bottom: 8px;">
+      ⬇ Download Available
+    </div>
+    <p style="margin: 0 0 10px; color: #ccc;">A newer Roblox WindowsPlayer version was detected. You can download it using the link below:</p>
+    <a href="https://rdd.weao.xyz/?channel=LIVE&binaryType=WindowsPlayer&version=${latest.hash}" 
+       target="_blank"
+       style="display:inline-block;padding:12px 20px;background:#00ffc3;color:#000;font-weight:600;border-radius:8px;text-decoration:none;transition:all 0.2s ease;">
+      🔽 Download Next Roblox Build (version: ${latest.hash})
+    </a>
+  </div>
+`;
+
 
       } else {
         status.innerHTML = `✅ <span style="color:#27ff7e">You are using the latest version.</span>`;
